[update] update button to bootstrap button

--- a/app/search.html
+++ b/app/search.html
@@ -30,7 +30,7 @@
       <div class="searchBar container-fluid">        
         <h2>MyBooks</h2>
         <input />
-        <button>Find Books</button>
+        <button class="btn btn-primary" type="submit">Find Books</button>
       </div>
       <div class="searchResults"></div>
     </div>
