[update] remove template and put html into component

--- a/app/search.html
+++ b/app/search.html
@@ -19,27 +19,11 @@
     <!-- JS file -->
     <script src="./search.js"></script>
   </header>
-
   <body ng-controller="myController">
-    <abc name="Jon"></abc>
-    <div class="menu">
-      <div class="btn-group" role="group">
-        <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle btn btn-info" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </button>
-        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-          <a class="dropdown-item" href="#">Favorites List</a>
-          <a class="dropdown-item" href="#">Login/Logout</a>
-        </div>
-      </div>   
+    <search-Header></search-Header> 
 
-      <div class="searchBar container-fluid">        
-        <h2>MyBooks</h2>
-        <input />
-        <button class="btn btn-primary" type="submit">Find Books</button>
-      </div>
-      <div class="searchResults"></div>
-    </div>
+
+
 
 <!-- save this for the cards when you get the data -->
 <!--     <div class="card card-outline-primary">  
