[add] add ngmodel to input and move functions outside of modules

--- a/app/search.html
+++ b/app/search.html
@@ -21,41 +21,6 @@
   </header>
   <body ng-controller="myController">
     <search-Header></search-Header> 
-
-
-
-
-<!-- save this for the cards when you get the data -->
-<!--     <div class="card card-outline-primary">  
-      <div class="card-deck-wrapper">
-        <div class="card-deck">
-          <div class="card">
-            <img class="card-img-top" src="http://placehold.it/241x200" alt="Card image cap">
-            <div class="card-block">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="http://placehold.it/242x200" alt="Card image cap">
-            <div class="card-block">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="http://placehold.it/242x200" alt="Card image cap">
-            <div class="card-block">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
+    <div class="searchResults"></div>
   </body>
 </html>
