--- a/app/login.html
+++ b/app/login.html
@@ -17,7 +17,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js">    
     </script>
   </header>
-  <body ng-controller="myController">
+  <body ng-controller="myLoginCtrl">
+    <user-Login></user-Login>
+
     <!-- JS file -->
     <script src="./login.js"></script>    
   </body>
