--- a/app/login.html
+++ b/app/login.html
@@ -4,7 +4,7 @@
     <title>myBooks:Login</title>
     <!-- Jquery -->
     <script
-      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>  
     <!-- bootstrap tooltips require tether -->
@@ -20,7 +20,8 @@
     <!-- firebase  -->
     <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-auth.js"></script>    
+    <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-auth.js"></script>  
+    <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-database.js"></script>  
   </header>
   <body ng-controller="myLoginCtrl">
     <user-Login></user-Login>
