--- a/app/search.html
+++ b/app/search.html
@@ -4,7 +4,7 @@
     <title>myBooks:Search</title>
     <!-- Jquery -->
     <script
-      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous"></script>  
     <!-- bootstrap tooltips require tether -->
@@ -14,11 +14,28 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/styles.css">
     <!-- Angular 1.5.6 -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js">    
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"    
     </script>
+    <!-- firebase  -->
+    <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-auth.js"></script>  
+    <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-database.js"></script>
   </header>
   <body ng-controller="myController">
     <search-Header></search-Header>
+    <!-- firebase init -->
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyDXa8vdpA9EjmD17JPHKA0zm90rMa0Y2YQ",
+        authDomain: "mybooks-2e524.firebaseapp.com",
+        databaseURL: "https://mybooks-2e524.firebaseio.com",
+        storageBucket: "mybooks-2e524.appspot.com",
+        messagingSenderId: "992893521596"
+      };
+      firebase.initializeApp(config);
+    </script>      
     <!-- JS file -->
     <script src="./search.js"></script>    
   </body>
