--- a/app/favorites.html
+++ b/app/favorites.html
@@ -1,4 +1,44 @@
 <!DOCTYPE html>
-<html><header><title></title></header><body>
-  hi
-</body></html>
+<html ng-app="myFavorites">
+  <header>
+    <title>myBooks:Login</title>
+    <!-- Jquery -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"></script>  
+    <!-- bootstrap tooltips require tether -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.8/js/tether.min.js"></script>    
+    <!-- bootstrap 4 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/styles.css">
+    <!-- Angular 1.5.6 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js">    
+    </script>
+
+    <!-- firebase  -->
+    <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-auth.js"></script>  
+    <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-database.js"></script>  
+  </header>
+  <body ng-controller="myFavoritesCtrl">
+    <render-Favorites></render-Favorites>
+
+    <!-- firebase init -->
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyDXa8vdpA9EjmD17JPHKA0zm90rMa0Y2YQ",
+        authDomain: "mybooks-2e524.firebaseapp.com",
+        databaseURL: "https://mybooks-2e524.firebaseio.com",
+        storageBucket: "mybooks-2e524.appspot.com",
+        messagingSenderId: "992893521596"
+      };
+      firebase.initializeApp(config);
+    </script>    
+    <!-- JS file -->
+    <script src="./favorites.js"></script>    
+  </body>
+</html>
