--- a/app/favorites.html
+++ b/app/favorites.html
@@ -16,15 +16,17 @@
     <!-- Angular 1.5.6 -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js">    
     </script>
-
     <!-- firebase  -->
     <script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-auth.js"></script>  
     <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-database.js"></script>  
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/2.1.0/angularfire.min.js"></script>    
   </header>
   <body ng-controller="myFavoritesCtrl">
-    <render-Favorites></render-Favorites>
+
+    <test></test>
 
     <!-- firebase init -->
     <script>
