[update] update to run app on localhost and replaced template with templateUrl within login component

--- a/app/login.html
+++ b/app/login.html
@@ -37,7 +37,7 @@
   </header>
   <body ng-controller="myLoginCtrl">
     <user-Login></user-Login>
-
+    <p>test</p>
    
     <!-- JS file -->
     <script src="./login.js"></script>    
